add returnUser function

--- a/templates/form.html
+++ b/templates/form.html
@@ -1,4 +1,4 @@
-<form method="POST" action="/getUser">
+<form method="POST" action="/returnUser">
     First Name: <input type="text" name="first" placeholder="first"/><br>
     Last Name: <input type="text" name="last" placeholder="last"/><br>
     Email: <input type="text" name="email" placeholder="email" /><br><br>
